[gd_scene load_steps=17 format=3 uid="uid://c2ruek3osbr1b"]

[ext_resource type="Script" path="res://scenes/Game.gd" id="1_7uuqv"]
[ext_resource type="PackedScene" path="res://scenes/PersonRandomizer.tscn" id="2_11wco"]
[ext_resource type="AudioStream" uid="uid://dvqagtnqtrimm" path="res://assets/music/horrible.wav" id="2_arets"]
[ext_resource type="Script" path="res://scenes/GameStateMachine.gd" id="2_l1akh"]
[ext_resource type="Script" path="res://scenes/TitleScreenState.gd" id="3_8lc77"]
[ext_resource type="PackedScene" uid="uid://hq3mhsieof3k" path="res://scenes/ComboManager.tscn" id="3_ke5jt"]
[ext_resource type="Script" path="res://scenes/InstructionsState.gd" id="4_am7d0"]
[ext_resource type="Script" path="res://scenes/PauseState.gd" id="4_bmc37"]
[ext_resource type="AudioStream" uid="uid://cvixj04gyk8ph" path="res://assets/sfx/hurt_1.wav" id="4_ki8p4"]
[ext_resource type="AudioStream" uid="uid://bbnna0bfalsvs" path="res://assets/sfx/grab_ready.wav" id="4_rhxww"]
[ext_resource type="PackedScene" uid="uid://bqjywyns0o5n8" path="res://scenes/ClampedTimer.tscn" id="4_ukup6"]
[ext_resource type="Script" path="res://scenes/PlayingState.gd" id="5_n3sen"]
[ext_resource type="PackedScene" uid="uid://bm2rqgydt3d85" path="res://scenes/GameplayGui.tscn" id="5_pdk4a"]
[ext_resource type="Script" path="res://scenes/QuoteState.gd" id="5_xam4v"]
[ext_resource type="Script" path="res://scenes/GameOverState.gd" id="6_i1mgl"]
[ext_resource type="AudioStream" uid="uid://bnfy58ngmpntw" path="res://assets/sfx/second.wav" id="8_gdam6"]

[node name="Game" type="Node"]
script = ExtResource("1_7uuqv")
music_bg = ExtResource("2_arets")
accept_sfx = ExtResource("4_rhxww")
cancel_sfx = ExtResource("4_ki8p4")
stamina_sec = 5.0

[node name="GameStateMachine" type="Node" parent="."]
process_mode = 3
script = ExtResource("2_l1akh")

[node name="TitleScreenState" type="Node" parent="GameStateMachine"]
script = ExtResource("3_8lc77")

[node name="InstructionsState" type="Node" parent="GameStateMachine"]
script = ExtResource("4_am7d0")

[node name="QuoteState" type="Node" parent="GameStateMachine"]
script = ExtResource("5_xam4v")

[node name="PauseState" type="Node" parent="GameStateMachine"]
script = ExtResource("4_bmc37")

[node name="PlayingState" type="Node" parent="GameStateMachine"]
process_mode = 1
script = ExtResource("5_n3sen")

[node name="GameOverState" type="Node" parent="GameStateMachine"]
script = ExtResource("6_i1mgl")

[node name="PersonRandomizer" parent="." instance=ExtResource("2_11wco")]

[node name="ComboManager" parent="." instance=ExtResource("3_ke5jt")]
duration_sec = 5.0
max_multiplier = 3.0
multiplier_delta = 0.1

[node name="StaminaTimer" parent="." instance=ExtResource("4_ukup6")]

[node name="GameplayGui" parent="." instance=ExtResource("5_pdk4a")]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_gdam6")
bus = &"Music"
